swagger documentation for Questions controller
